하이브리드회원로그인

--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,6 @@
        (A[l].q=A[l].q||[]).push(arguments)},A[l].l=+new Date,a=n.createElement(g),
        r=n.getElementsByTagName(g)[0],a.src=u,r.parentNode.insertBefore(a,r)
        }(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
        ga('create', 'UA-XXXXX-X');
        ga('send', 'pageview');
     </script>
@@ -59,6 +58,8 @@
         <script src="scripts/controllers/user-list.js"></script>
         <script src="scripts/controllers/user-detail.js"></script>
         <script src="scripts/controllers/user-withdraw.js"></script>
+        <script src="scripts/services/session-info.js"></script>
+        <script src="scripts/services/session-service.js"></script>
         <!-- endbuild -->
 </body>
 </html>
